Added packing workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,1 @@
-# --- VS Code & GitHub metadata ---
-*.code-workspace
-.vscode/
-copilot-instructions.md
-LatentFunctions.md
-
-# --- WitcherScript specific ---
-witcherscript.toml
-Encode_Strings.bat
-Notebook/
-
-# --- Symlinked folders ---
-.github
-.vscode
-Notebook
-
-# --- Logs & temp files ---
-*.log
-*.tmp
-*.bak
-*.swp
-
-# --- Windows system clutter ---
-Thumbs.db
-Desktop.ini
-ehthumbs.db
-
-# --- Build artifacts (general) ---
-obj/
-dist/
-out/
-
-*.zip
+C:/Users/ashle/Documents/Witcher 3 Script Mod/Common Folders/WitcherScript/ProjectTemplate/.gitignore
